# Covid-RARS

./: .gitattributes  .gitignore  ARTIFACT.md  After-First-Run.md  CITATION.cff  CONTRIBUTING.md  NOTICE.md  README.md  UBUNTU_NEXT_RUNBOOK_2026-06-11.md  high_metric_extensions_2026-06-19.patch
covid_audio_btp/: .SESSION_HANDOFF_2026-05-25.md  .gitignore  ADVANCED_EXTENSION_FROM_GEMINI_PDFS.md  DECISION_LOCK_AND_LOCAL_RUN_PROTOCOL.md  IMPLEMENTATION_STATUS.md  LOCAL_GPU_HANDOFF_CHECKLIST.md  LOCAL_RUN_EXACT_COMMANDS.md  MASTER_PROJECT_GUIDE.md  NOTEBOOK_FIRST_RUN_GUIDE.md  README.md  RUNBOOK_PUBLICATION_GRADE.md  RUNBOOK_STAGE_1.md  RUNBOOK_STAGE_2_TO_8.md  pyproject.toml  requirements-gpu.txt  requirements-optional.txt  requirements.txt  run_compare_is10_rescue_e2e.sh  run_paper_comparable_cv_e2e.sh  run_sota_e2e.sh  run_strong_baseline_e2e.sh
covid_audio_btp/app/: app.py
covid_audio_btp/notebooks/: 00_MASTER_RUN_ALL.ipynb  00_RUN_EVERYTHING_PUBLICATION.ipynb  01_dataset_audit.ipynb  02_quality_review.ipynb  03_feature_review.ipynb  04_ml_baseline_review.ipynb  05_cnn_review.ipynb  06_calibration_fusion_review.ipynb  07_shift_confounding_review.ipynb  08_publication_grade_experiments.ipynb  NOTEBOOK_ORDER.md  NOTEBOOK_WORKFLOW.md
covid_audio_btp/references/: verified_source_registry.md
covid_audio_btp/reports/: experiment_manifest.json
covid_audio_btp/research_protocol/: 2026-05-25-drive-plan-with-publication-grade-addendum.md  2026-05-25-publication-grade-protocol-addendum.md  2026-05-26-dataset-schema-inspection.md
covid_audio_btp/scripts/: 07_train_cnn.py  (+73 more)
(+548 files in other folders)
